# esp32-behampel

components/espidf-ccs811/include/: ccs811.hh
components/mp3/: Arduino.h  ArduinoCompatibility.cpp  AudioGeneratorMP3.cpp  AudioOutputI2S.cpp  AudioOutputI2S.h  AudioOutputNull.h  AudioStatus.h  CMakeLists.txt
components/ringtones/: ringtoneplayer.hh
main/: CMakeLists.txt  Kconfig.projbuild  connect.c  index.html  main.cpp  mp3player.hh  network.c  ws2812_strip.hh
