idf_component_register(SRCS "ArduinoCompatibility.cpp" "AudioFileSourceID3.cpp" "AudioFileSourceProgmem.cpp" "AudioGeneratorMP3.cpp" "AudioOutputI2S.cpp" "libmad/bit.c" "libmad/decoder.c" "libmad/fixed.c" "libmad/frame.c" "libmad/huffman.c" "libmad/layer3.c" "libmad/stream.c" "libmad/synth.c" "libmad/timer.c" "libmad/version.c"
                       INCLUDE_DIRS "."
                       )

